fixin things up

--- a/webCL.html
+++ b/webCL.html
@@ -41,7 +41,7 @@
         
         <article>
             <!--<h2>Web Design Portfolio</h2>-->   
-            <p>The web development projects listed on my attached resume are works in progress.</span><span class="ital"> Blackfish Stand Up Paddle</span> is an informational website for an Outfitter's guide business. My <span class="ital"> University of Minnesota Binstadt Lab</span> website is another informational website, but more clinical in style than the first site mentioned. The development that I have done on the <span class="ital"> Sarah Sandstrom SUP Racer</span> website is geared towards building a fun &amp; interactive online athlete portfolio.</p>
+            <p>The web development projects listed on my <a href="index.html" text="Click on the words 'attached resume' to see Erik's resume."> attached resume</a> are works in progress.</span><span class="ital"> Blackfish Stand Up Paddle</span> is an informational website for an Outfitter's guide business. My <span class="ital"> University of Minnesota Binstadt Lab</span> website is another informational website, but more clinical in style than the first site mentioned. The development that I have done on the <span class="ital"> Sarah Sandstrom SUP Racer</span> website is geared towards building a fun &amp; interactive online athlete portfolio.</p>
         </article>
          
         </div>
