added link to CL

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <p id="availableWhen">I will be available to begin work two weeks after your job offer, so that I may show my current employer the respect of giving the proper two weeks notice.</p>    
         </article>
             </div>
+            <p><a href="webCL.html">Click here</a> to view my Letter of Interest</p>
         <footer>
             <h6>&copy;2015 Minimum Wake Web Concern
             </h6>
