added link to MW portfolio

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </article>
         
         <article>
-            <h2>Web Design Portfolio</h2>   
+            <h2>Web Design Portfolio</h2><h5><a href="http://sands33.github.io/minimumWake/">Click here</a> for samples.</h5>
             <ul>
               <li><span class="bold"><a href="http://blackfishsup.com/" alt="link to Blackfish StandUp Paddle website">Blackfish Stand Up Paddle</a></span>- website</li>
               <li><span class="bold"><a href="http://sands33.github.io/MICaB/">University of Minnesota Binstadt Lab</a></span>- website</li>
@@ -62,7 +62,7 @@
             <p id="availableWhen">I will be available to begin work two weeks after your job offer, so that I may show my current employer the respect of giving the proper two weeks notice.</p>    
         </article>
             </div>
-            <p><a href="webCL.html">Click here</a> to view my Letter of Interest</p>
+            <h5><a href="webCL.html">Click here</a> to view my Letter of Interest</h5>
         <footer>
             <h6>&copy;2015 Minimum Wake Web Concern
             </h6>
