deleted bike commuting msg

--- a/webCL.html
+++ b/webCL.html
@@ -22,7 +22,7 @@
         <div id="aboveFold">
         
         <article id="mission">
-              <p> My main professional goal is to find a rewarding job that pays well, and that benefits society. I am always up for a new challenge, so I am looking for a dynamic and nuturing work environment. I strive to only bike and telecommute to work- so to be in close proximity to my workplace is another professional goal of mine. 
+              <p> My main professional goal is to find a rewarding job that pays well, and that benefits society. I am always up for a new challenge, so I am looking for a dynamic and nuturing work environment. 
               </p>
         </article>
         
