updated class credentials.

--- a/webCL.html
+++ b/webCL.html
@@ -29,7 +29,7 @@
         
         <article id="education">
             <!--<h2>Educational Background</h2>-->
-              <p> In 2000, I received my BA Degree in Environmental Studies from the University of Colorado. Since then, I have completed the Intro to HTML and CSS course at North Seattle Community College. Currently, I am enrolled in a 9 month duration University of Washington certificate program called <span class="ital">HTML5 &amp; Responsive Design.</span> 
+              <p> In 2000, I received my BA Degree in Environmental Studies from the University of Colorado. Since then, I have completed the Intro to HTML and CSS course at North Seattle Community Collegeand a 9 month duration University of Washington certificate program called <span class="ital">HTML5 &amp; Responsive Design.</span> Currently I am enrolled in the <span class="ital">Programming with JavaScript</span> program at the UW. 
               </p>
         </article>
         
