added hotlinks to writing sample

--- a/webCL.html
+++ b/webCL.html
@@ -42,7 +42,7 @@
         
         <article>
             <!--<h2>Web Design Portfolio</h2>-->   
-            <p>The web development projects listed on my <a href="index.html" text="Click on the words 'attached resume' to see Erik's resume."> attached resume</a> are works in progress.</span><span class="ital"> Blackfish Stand Up Paddle</span> is an informational website for an Outfitter's guide business. The development that I have done on the <span class="ital"> Sarah Sandstrom SUP Racer</span> website is geared towards building a fun &amp; interactive online athlete portfolio.</p>
+            <p>The web development projects listed on my <a href="index.html" text="Click on the words 'attached resume' to see Erik's resume."> attached resume</a> are works in progress.</span><span class="ital"> Blackfish Stand Up Paddle</span> is an informational website for an Outfitter's guide business. The development that I have done on the <span class="ital"> Sarah Sandstrom SUP Racer</span> website is geared towards building a fun &amp; interactive online athlete portfolio. The Ford Mustang writing sample has not been published and was written for portfolio purposes only.</p>
         </article>
          
         </div>
