--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </article>
         
         <article>
-            <h2>Web Design Portfolio</h2><h5><a href="http://sands33.github.io/minimumWake/">Click here</a> for samples.</h5>
+            <h2>Web Design Portfolio</h2><h5><a href="http://sands33.github.io/webResume/">Click here</a> for writing sample.</h5>
             <ul>
               <li><span class="bold"><a href="http://blackfishsup.com/" alt="link to Blackfish StandUp Paddle website">Blackfish Stand Up Paddle</a></span>- website</li>
               <li><span class="bold"><a href="http://sands33.github.io/Sarah-Athlete-Page/">Sarah Sandstrom SUP Racer</a></span>- website</li>
