--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <article>
             <h2>Web Design Portfolio</h2>
             <h5><a href="http://sands33.github.io/webResume/2017Mustang.html">Click here</a> for a writing sample.</h5>
-            <h5><a href="http://sands33.github.io/minimumWake/">Click here</a> for graphic design samples.</h5>
+            <h5><a href="http://sands33.github.io/webResume/graphicDesignPortfolio_webResume.html">Click here</a> for graphic design samples.</h5>
             <ul>
               <li><span class="bold"><a href="http://blackfishsup.com/" alt="link to Blackfish StandUp Paddle website">Blackfish Stand Up Paddle</a></span>- website</li>
               <li><span class="bold"><a href="http://sands33.github.io/Sarah-Athlete-Page/">Sarah Sandstrom SUP Racer</a></span>- website</li>
